# web-api

./: .gitignore  Cargo.toml
api/: Cargo.toml
api/src/: database.rs  main.rs
api/src/routes/: index.rs  user.rs
api/src/view_models/: mod.rs  user.rs
client/: package-lock.json  package.json
client/src/: App.tsx  index.tsx
client/src/components/: DefaultButton.tsx
entity/: Cargo.toml
entity/src/: user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230204_151610_Initial.rs
src/: main.rs
src/routes/: user.rs
