[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
rocket = {version = "0.5.0-rc.2", features = ["json"] }
rocket_contrib = {version = "0.4.11", default-features = false, features = ["json"]}
sea-orm = { version = "^0", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
entity = { path = "../entity" }
migration = { path = "../migration" } # depends on your needs
dotenv = "^0"
tokio = { version = "1", features = ["full"] }
